fixed entities + fixed repository tests